Reduced flashcard max width from 95vw to 90vw to fix mobile overflow

--- a/src/components/Flashcard/Flashcard.module.scss
+++ b/src/components/Flashcard/Flashcard.module.scss
@@ -1,6 +1,6 @@
 .flashcard {
   background-color: var(--card-color);
-  width: min(380px, 95vw);
+  width: min(380px, 90vw);
   min-height: min(420px, 90vh);
   height: 100%;
   max-height: 90vh;
@@ -52,7 +52,7 @@
   }
 
   &.small {
-    width: min(400px, 95vw);
+    width: min(400px, 90vw);
     min-height: min(240px, 90vh);
     font-size: calc(10px + 1.25vmin);
 
@@ -122,7 +122,7 @@
 
 @media screen and (min-width: 1024px) {
   .flashcard {
-    width: min(600px, 95vw);
+    width: min(600px, 90vw);
     min-height: min(420px, 90vh);
     height: 100%;
     max-height: 90vh;
